@@ -1,5 +1,8 @@
 Release Notes
 
+* 5/23/2018
+  * changed AtlasAJB for hospital
+
 * 5/7/2018
   * excluding validation from *_AES for es conversion
 
